--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTP-8">
-        <title>portifólio carol faro</title>
+        <title>carol faro</title>
 
     </head>
     <body>
