add new portifolio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1> Caroline Faro </h1>
-        <p id="eu"> </p> <img src="PERFIL.jpg"  alt="essa é uma foto muito chique minha, em preto e branco, e usei ela porque só tenho ela baixada no linux" width="400px">
+        <p id="eu"> </p> <img src="PERFIL1.jpg"  alt="essa é uma foto muito chique minha, em preto e branco, e usei ela porque só tenho ela baixada no linux" width="400px">
         <br><br>
        <h2> <i>Seções de coisas que você não pode dormir sem saber sobre mim:</i></h2>
         <h3>
